--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="-sYZDp4aLDTo6iO3YVlDUxGwreRJwMGtQ41VyW50SpM" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>DevGib by iic-ninjas</title>
 
@@ -11,6 +12,17 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-49127540-2', 'iic-ninjas.github.io');
+      ga('send', 'pageview');
+    </script>
+
   </head>
   <body>
     <div class="wrapper">
@@ -38,6 +50,6 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+
   </body>
 </html>
