--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="google-site-verification" content="-sYZDp4aLDTo6iO3YVlDUxGwreRJwMGtQ41VyW50SpM" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>DevGib by iic-ninjas</title>
 
@@ -19,7 +18,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-49127540-2', 'iic-ninjas.github.io');
+      ga('create', 'UA-49127540-2', {'cookieDomain':'iic-ninjas.github.io'});
       ga('send', 'pageview');
     </script>
 
