--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-49127540-2', {'cookieDomain':'iic-ninjas.github.io'});
+      ga('create', 'UA-49127540-2', 'iic-ninjas.github.io');
       ga('send', 'pageview');
     </script>
 
