--- a/index.html
+++ b/index.html
@@ -31,11 +31,8 @@
 
         <p class="view"><a href="https://github.com/iic-ninjas/DevGib">View the Project on GitHub <small>iic-ninjas/DevGib</small></a></p>
 
-
-        <ul>
-          <li><a href="https://github.com/iic-ninjas/DevGib/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/iic-ninjas/DevGib">View On <strong>GitHub</strong></a></li>
-        </ul>
+          <a href="https://github.com/iic-ninjas/DevGib/zipball/master">Download <strong>Chrome Extension</strong></a></li>
+          <a href="https://github.com/iic-ninjas/DevGib">View On <strong>GitHub</strong></a></li>
       </header>
       <section>
         <p><img src="https://raw.github.com/iic-ninjas/DevGib/master/public/logos/logo-with-slogan.png" alt="devgib-logo"></p>
@@ -43,7 +40,7 @@
 <p>DevGib is a Chrome extension that analyzes the quality of dev-related links (e.g.: Github repositories, StackOverflow questions) before accessing them.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/iic-ninjas">iic-ninjas</a></p>
+        <p>This project is maintained by <a href="https://twitter.com/ShayHDavidson">@ShayHDavidson</a></p> and <a href="https://github.com/iic-ninjas">eBay Israel Innovation Center</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
