--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <p class="view"><a href="https://github.com/iic-ninjas/DevGib">View the Project on GitHub <small>iic-ninjas/DevGib</small></a></p>
 
-          <a href="https://github.com/iic-ninjas/DevGib/zipball/master">Download <strong>Chrome Extension</strong></a></li>
+          <a href="https://chrome.google.com/webstore/detail/devgib/pkchajlcgibonmocadnippbgjkceieeb">Download <strong>Chrome Extension</strong></a></li>
           <a href="https://github.com/iic-ninjas/DevGib">View On <strong>GitHub</strong></a></li>
       </header>
       <section>
