--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       <section>
         <p><img src="https://raw.github.com/iic-ninjas/DevGib/master/public/logos/logo-with-slogan.png" alt="devgib-logo"></p>
 
+Note about putting Github access token.
+
 <p>DevGib is a Chrome extension that analyzes the quality of dev-related links (e.g.: Github repositories, StackOverflow questions) before accessing them.</p>
       </section>
       <footer>
