--- a/index.html
+++ b/index.html
@@ -28,12 +28,23 @@
     <div class="wrapper">
       <header>
         <h1>DevGib</h1>
-        <p>Analyze the quality of dev-related links before accessing them</p>
+        <p>A Chrome extension that analyzes the quality of programming-related links.</p>
 
-        <p class="view"><a href="https://github.com/iic-ninjas/DevGib">View the Project on GitHub <small>iic-ninjas/DevGib</small></a></p>
 
-          <a href="https://chrome.google.com/webstore/detail/devgib/pkchajlcgibonmocadnippbgjkceieeb">Download <strong>Chrome Extension</strong></a></li>
-          <a href="https://github.com/iic-ninjas/DevGib">View On <strong>GitHub</strong></a></li>
+        <img src="images/chrome-icon.png">
+        <div style="display:inline-block; margin-bottom:10px;">
+          <h3><a href="https://chrome.google.com/webstore/detail/devgib/pkchajlcgibonmocadnippbgjkceieeb">Download</a></h3>
+          <span style="position:relative; top:-3px">from Chrome Web Store</span>
+        </div>
+
+        <br>
+
+        <img src="images/github-icon.png">
+        <div style="display:inline-block">
+          <h3><a href="https://github.com/iic-ninjas/DevGib">Source</a></h3>
+          <span style="position:relative; top:-3px">on Github</span>
+        </div>
+
       </header>
       <section>
         <p><img src="https://raw.github.com/iic-ninjas/DevGib/master/public/logos/logo-with-slogan.png" alt="devgib-logo"></p>
