--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Note about putting Github access token.
 <p>DevGib is a Chrome extension that analyzes the quality of dev-related links (e.g.: Github repositories, StackOverflow questions) before accessing them.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://twitter.com/ShayHDavidson">@ShayHDavidson</a> and <a href="https://github.com/iic-ninjas">eBay Israel Innovation Center</a></p>
+        <p>DevGib was created by <a href="https://twitter.com/ShayHDavidson">@ShayHDavidson</a> and the <a href="https://github.com/iic-ninjas">eBay Israel Innovation Center</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
