--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         <h1>DevGib</h1>
         <p>A Chrome extension that analyzes the quality of programming-related links.</p>
 
-
         <img src="images/chrome-icon.png">
         <div style="display:inline-block; margin-bottom:10px;">
           <h3><a href="https://chrome.google.com/webstore/detail/devgib/pkchajlcgibonmocadnippbgjkceieeb">Download</a></h3>
@@ -48,10 +47,22 @@
       </header>
       <section>
         <p><img src="https://raw.github.com/iic-ninjas/DevGib/master/public/logos/logo-with-slogan.png" alt="devgib-logo"></p>
+        <p>DevGib is a Chrome extension that analyzes the quality of programming-related resources before viewing them, and shows the ranking next to their link:</p>
 
-Note about putting Github access token.
+        <img src="images/google.png">
 
-<p>DevGib is a Chrome extension that analyzes the quality of dev-related links (e.g.: Github repositories, StackOverflow questions) before accessing them.</p>
+        <span>DevGib currently supports:</span>
+        <ul>
+          <li>Github repositories.
+          <li>StackOverflow questions.
+        </ul>
+
+        <img src="https://raw.github.com/iic-ninjas/DevGib/master/public/examples/github.png">
+
+        <br><br>
+
+        <span>DevGiv works anywhere in the web.</span>
+
       </section>
       <footer>
         <p>DevGib was created by <a href="https://twitter.com/ShayHDavidson">@ShayHDavidson</a> and the <a href="https://github.com/iic-ninjas">eBay Israel Innovation Center</a></p>
