--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <img src="images/chrome-icon.png">
         <div style="display:inline-block; margin-bottom:10px;">
-          <h3><a href="https://chrome.google.com/webstore/detail/devgib/pkchajlcgibonmocadnippbgjkceieeb">Download</a></h3>
+          <h3><a href="https://chrome.google.com/webstore/detail/devgib/pkchajlcgibonmocadnippbgjkceieeb">Install</a></h3>
           <span style="position:relative; top:-3px">from Chrome Web Store</span>
         </div>
 
@@ -61,7 +61,23 @@
 
         <br><br>
 
-        <span>DevGiv works anywhere in the web.</span>
+        <span>DevGib works anywhere in the web.</span>
+
+        <br><br>
+
+        <hr>
+
+        <strong>How to setup DevGib:</strong>
+        <ul>
+          <li><a href="https://chrome.google.com/webstore/detail/devgib/pkchajlcgibonmocadnippbgjkceieeb">Install</a> the extension.</li>
+        </ul>
+
+        <strong>Optional setup</strong> (for unlimited Github ranking)<strong>:</strong>
+        <ul>
+          <li>After installation, click the DevGib extension icon, and press the <i>Generate access token</i> link. In the Github application page, press <i>Generate new token</i>. Use the default scopes, and press <i>Generate Token</i>.</i></li>
+          <li>Copy the generated token to the text field inside the DevGib extension popup.</li>
+        </ul>
+
 
       </section>
       <footer>
