--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <p>A Chrome extension that analyzes the quality of programming-related links.</p>
 
         <img src="images/chrome-icon.png">
-        <div style="display:inline-block; margin-bottom:10px;">
+        <div style="display:inline-block; margin-bottom:15px;">
           <h3><a href="https://chrome.google.com/webstore/detail/devgib/pkchajlcgibonmocadnippbgjkceieeb">Install</a></h3>
-          <span style="position:relative; top:-3px">from Chrome Web Store</span>
+          <span style="position:relative; top:-1px">from Chrome Web Store</span>
         </div>
 
         <br>
@@ -41,15 +41,17 @@
         <img src="images/github-icon.png">
         <div style="display:inline-block">
           <h3><a href="https://github.com/iic-ninjas/DevGib">Source</a></h3>
-          <span style="position:relative; top:-3px">on Github</span>
+          <span style="position:relative; top:-1px">on Github</span>
         </div>
 
       </header>
       <section>
-        <p><img src="https://raw.github.com/iic-ninjas/DevGib/master/public/logos/logo-with-slogan.png" alt="devgib-logo"></p>
+        <p style='margin:0 0'><img src="https://raw.github.com/iic-ninjas/DevGib/master/public/logos/logo-with-slogan.png" alt="devgib-logo"></p>
         <p>DevGib is a Chrome extension that analyzes the quality of programming-related resources before viewing them, and shows the ranking next to their link:</p>
 
         <img src="images/google.png">
+
+        <hr>
 
         <span>DevGib currently supports:</span>
         <ul>
