--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta property='og:image' content='images/og.png'/>
+    <meta property='og:image' content='http://iic-ninjas.github.io/DevGib/images/og.png'/>
 
     <title>DevGib</title>
 
