--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="wrapper">
       <header>
         <h1>DevGib</h1>
-        <p>A Chrome extension that analyzes the quality of programming-related links.</p>
+        <p>A Chrome extension that analyzes the popularity and quality of programming-related links.</p>
 
         <img src="images/chrome-icon.png">
         <div style="display:inline-block; margin-bottom:15px;">
@@ -49,7 +49,7 @@
       </header>
       <section>
         <p style='margin:0 0'><img src="https://raw.github.com/iic-ninjas/DevGib/master/public/logos/logo-with-slogan.png" alt="devgib-logo"></p>
-        <p>DevGib is a Chrome extension that analyzes the quality of programming-related resources before viewing them, and shows the ranking next to their link:</p>
+        <p>DevGib is a Chrome extension that shows ranking for programming-related resources in the web based on their popularity and quality.</p>
 
         <img src="images/google.png">
 
@@ -79,7 +79,7 @@
         <strong>Optional setup</strong> (for unlimited Github ranking)<strong>:</strong>
         <ul>
           <li>After installation, click the DevGib extension icon, and press the <i>Generate access token</i> link. In the Github application page, press <i>Generate new token</i>. Use the default scopes, and press <i>Generate Token</i>.</i></li>
-          <li>Copy the generated token to the text field inside the DevGib extension popup.</li>
+          <li>Copy the generated toke6n to the text field inside the DevGib extension popup.</li>
         </ul>
 
 
