--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <strong>Optional setup</strong> (for unlimited Github ranking)<strong>:</strong>
         <ul>
-          <li>After installation, click the DevGib extension icon, and press the <i>Generate access token</i> link. In the Github application page, press <i>Generate new token</i>. Use the default scopes (remove the `repo` tick if you don't want DevGib to have access to your private repos), and press <i>Generate Token</i>.</i></li>
+          <li>After installation, click the DevGib extension icon, and press the <i>Generate access token</i> link. In the Github application page, press <i>Generate new token</i>. Select only `public_repo` from the available scopes, and press <i>Generate Token</i>.</i></li>
           <li>Copy the generated toke6n to the text field inside the DevGib extension popup.</li>
         </ul>
 
